--- a/Heatmapper/View/WorkoutCollectionViewCell.xib
+++ b/Heatmapper/View/WorkoutCollectionViewCell.xib
@@ -4,54 +4,57 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="WorkoutCollectionViewCell" customModule="Heatmapper" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="WorkoutCollectionViewCell" customModule="Heatmapper" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
-            <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YRe-Wn-z9h">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="260"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vWU-Ty-GC7">
-                                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="vWU-Ty-GC7" secondAttribute="height" id="6KY-jf-suT"/>
-                                </constraints>
-                            </imageView>
-                            <view contentMode="scaleToFill" horizontalCompressionResistancePriority="249" verticalCompressionResistancePriority="249" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TnF-rH-XNt" userLabel="Spacer View">
-                                <rect key="frame" x="0.0" y="200" width="200" height="60"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
-                        </subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vWU-Ty-GC7">
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="218.5"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="TnF-rH-XNt" secondAttribute="bottom" id="Bju-oz-2qB"/>
-                            <constraint firstItem="TnF-rH-XNt" firstAttribute="leading" secondItem="YRe-Wn-z9h" secondAttribute="leading" id="kAh-ts-JTP"/>
-                            <constraint firstAttribute="trailing" secondItem="TnF-rH-XNt" secondAttribute="trailing" id="wQ8-dI-YhF"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="C2C-ob-01i"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="YVR-eN-9Hn"/>
                         </constraints>
-                    </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Workout Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L8d-Le-KW8" userLabel="Workout Date" customClass="ThemeSmallTextUILabel" customModule="Heatmapper" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="260" width="200" height="20"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nid-8B-d6G" userLabel="Activity" customClass="ThemeSmallTextUILabel" customModule="Heatmapper" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="218.5" width="200" height="20.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="TJX-IM-fi0"/>
+                            <constraint firstAttribute="height" constant="20.5" id="cAs-br-5SO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Venue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bVD-Lj-hBu" userLabel="Venue" customClass="ThemeSmallTextUILabel" customModule="Heatmapper" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="279.5" width="200" height="20.5"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20.5" id="xLJ-nZ-3rq"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WorkoutType" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.84999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="iQz-bH-oJt" userLabel="Workout Type" customClass="ThemeSmallTextUILabel" customModule="Heatmapper" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="280" width="200" height="20"/>
+                        <rect key="frame" x="0.0" y="259" width="200" height="20.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="tqu-x3-54l"/>
+                            <constraint firstAttribute="height" constant="20.5" id="A1R-ms-8Lp"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Workout Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L8d-Le-KW8" userLabel="Workout Date" customClass="ThemeSmallTextUILabel" customModule="Heatmapper" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="239" width="200" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="n1i-af-aBE"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -59,16 +62,26 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="iQz-bH-oJt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ENU-pC-uk3"/>
-                <constraint firstAttribute="trailing" secondItem="L8d-Le-KW8" secondAttribute="trailing" id="FGZ-b4-nyD"/>
-                <constraint firstAttribute="trailing" secondItem="YRe-Wn-z9h" secondAttribute="trailing" id="FHP-B0-LVC"/>
-                <constraint firstAttribute="trailing" secondItem="iQz-bH-oJt" secondAttribute="trailing" id="Fdq-BW-N8E"/>
-                <constraint firstItem="YRe-Wn-z9h" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="MN4-YL-mes"/>
-                <constraint firstItem="L8d-Le-KW8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="QA8-Sz-Q0J"/>
-                <constraint firstItem="L8d-Le-KW8" firstAttribute="top" secondItem="YRe-Wn-z9h" secondAttribute="bottom" id="bFP-AY-kwq"/>
-                <constraint firstItem="iQz-bH-oJt" firstAttribute="top" secondItem="L8d-Le-KW8" secondAttribute="bottom" id="hnd-JY-ccz"/>
-                <constraint firstAttribute="bottom" secondItem="iQz-bH-oJt" secondAttribute="bottom" id="nF2-sJ-xH5"/>
-                <constraint firstItem="YRe-Wn-z9h" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="rSg-m7-AFw"/>
+                <constraint firstItem="iQz-bH-oJt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="0EY-QK-Dq1"/>
+                <constraint firstItem="nid-8B-d6G" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="663-sD-yQe"/>
+                <constraint firstItem="L8d-Le-KW8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="AyU-Ky-sfs"/>
+                <constraint firstItem="iQz-bH-oJt" firstAttribute="top" secondItem="L8d-Le-KW8" secondAttribute="bottom" id="LwU-Vd-Ju5"/>
+                <constraint firstItem="L8d-Le-KW8" firstAttribute="top" secondItem="nid-8B-d6G" secondAttribute="bottom" id="NSd-3i-sxF"/>
+                <constraint firstItem="vWU-Ty-GC7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Ndb-ME-079"/>
+                <constraint firstAttribute="trailing" secondItem="vWU-Ty-GC7" secondAttribute="trailing" id="ONg-lw-wOi"/>
+                <constraint firstAttribute="bottom" secondItem="bVD-Lj-hBu" secondAttribute="bottom" id="PTP-Ep-N0o"/>
+                <constraint firstItem="iQz-bH-oJt" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Tjz-VQ-VO0"/>
+                <constraint firstAttribute="trailing" secondItem="L8d-Le-KW8" secondAttribute="trailing" id="Wjf-48-5Qs"/>
+                <constraint firstItem="nid-8B-d6G" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ZjH-rk-YaP"/>
+                <constraint firstItem="bVD-Lj-hBu" firstAttribute="top" secondItem="iQz-bH-oJt" secondAttribute="bottom" id="eVI-ig-0XW"/>
+                <constraint firstAttribute="trailing" secondItem="iQz-bH-oJt" secondAttribute="trailing" id="mDd-Yx-OvU"/>
+                <constraint firstItem="bVD-Lj-hBu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="mnq-kn-64J"/>
+                <constraint firstItem="L8d-Le-KW8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="oNc-tw-kIW"/>
+                <constraint firstAttribute="trailing" secondItem="bVD-Lj-hBu" secondAttribute="trailing" id="oP2-ZA-2HQ"/>
+                <constraint firstItem="nid-8B-d6G" firstAttribute="top" secondItem="vWU-Ty-GC7" secondAttribute="bottom" id="sQf-0B-d5I"/>
+                <constraint firstItem="vWU-Ty-GC7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="sdd-oK-aW8"/>
+                <constraint firstAttribute="trailing" secondItem="nid-8B-d6G" secondAttribute="trailing" id="xWF-8n-DTW"/>
+                <constraint firstItem="vWU-Ty-GC7" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ysY-dU-8Vj"/>
             </constraints>
             <size key="customSize" width="215" height="262"/>
             <connections>
@@ -76,12 +89,7 @@
                 <outlet property="workoutDateLabel" destination="L8d-Le-KW8" id="Y4O-G8-hut"/>
                 <outlet property="workoutTypeLabel" destination="iQz-bH-oJt" id="ZgF-5D-7FW"/>
             </connections>
-            <point key="canvasLocation" x="78.260869565217391" y="70.3125"/>
+            <point key="canvasLocation" x="-236" y="54"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
