--- a/Heatmapper/View/WorkoutCollectionViewCell.xib
+++ b/Heatmapper/View/WorkoutCollectionViewCell.xib
@@ -16,14 +16,14 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vWU-Ty-GC7">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="218.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="239"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="C2C-ob-01i"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="YVR-eN-9Hn"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activity" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nid-8B-d6G" userLabel="Activity" customClass="ThemeSmallTextUILabel" customModule="Heatmapper" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="218.5" width="200" height="20.5"/>
+                        <rect key="frame" x="0.0" y="239" width="200" height="20.5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20.5" id="cAs-br-5SO"/>
                         </constraints>
@@ -40,17 +40,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WorkoutType" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.84999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="iQz-bH-oJt" userLabel="Workout Type" customClass="ThemeSmallTextUILabel" customModule="Heatmapper" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="259" width="200" height="20.5"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20.5" id="A1R-ms-8Lp"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Workout Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L8d-Le-KW8" userLabel="Workout Date" customClass="ThemeSmallTextUILabel" customModule="Heatmapper" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="239" width="200" height="20"/>
+                        <rect key="frame" x="0.0" y="259.5" width="200" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="n1i-af-aBE"/>
                         </constraints>
@@ -62,32 +53,29 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="iQz-bH-oJt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="0EY-QK-Dq1"/>
                 <constraint firstItem="nid-8B-d6G" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="663-sD-yQe"/>
                 <constraint firstItem="L8d-Le-KW8" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="AyU-Ky-sfs"/>
-                <constraint firstItem="iQz-bH-oJt" firstAttribute="top" secondItem="L8d-Le-KW8" secondAttribute="bottom" id="LwU-Vd-Ju5"/>
                 <constraint firstItem="L8d-Le-KW8" firstAttribute="top" secondItem="nid-8B-d6G" secondAttribute="bottom" id="NSd-3i-sxF"/>
                 <constraint firstItem="vWU-Ty-GC7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Ndb-ME-079"/>
                 <constraint firstAttribute="trailing" secondItem="vWU-Ty-GC7" secondAttribute="trailing" id="ONg-lw-wOi"/>
                 <constraint firstAttribute="bottom" secondItem="bVD-Lj-hBu" secondAttribute="bottom" id="PTP-Ep-N0o"/>
-                <constraint firstItem="iQz-bH-oJt" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Tjz-VQ-VO0"/>
                 <constraint firstAttribute="trailing" secondItem="L8d-Le-KW8" secondAttribute="trailing" id="Wjf-48-5Qs"/>
                 <constraint firstItem="nid-8B-d6G" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ZjH-rk-YaP"/>
-                <constraint firstItem="bVD-Lj-hBu" firstAttribute="top" secondItem="iQz-bH-oJt" secondAttribute="bottom" id="eVI-ig-0XW"/>
-                <constraint firstAttribute="trailing" secondItem="iQz-bH-oJt" secondAttribute="trailing" id="mDd-Yx-OvU"/>
                 <constraint firstItem="bVD-Lj-hBu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="mnq-kn-64J"/>
                 <constraint firstItem="L8d-Le-KW8" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="oNc-tw-kIW"/>
                 <constraint firstAttribute="trailing" secondItem="bVD-Lj-hBu" secondAttribute="trailing" id="oP2-ZA-2HQ"/>
                 <constraint firstItem="nid-8B-d6G" firstAttribute="top" secondItem="vWU-Ty-GC7" secondAttribute="bottom" id="sQf-0B-d5I"/>
                 <constraint firstItem="vWU-Ty-GC7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="sdd-oK-aW8"/>
+                <constraint firstItem="bVD-Lj-hBu" firstAttribute="top" secondItem="L8d-Le-KW8" secondAttribute="bottom" id="unc-mI-5br"/>
                 <constraint firstAttribute="trailing" secondItem="nid-8B-d6G" secondAttribute="trailing" id="xWF-8n-DTW"/>
                 <constraint firstItem="vWU-Ty-GC7" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ysY-dU-8Vj"/>
             </constraints>
             <size key="customSize" width="215" height="262"/>
             <connections>
+                <outlet property="activityLabel" destination="nid-8B-d6G" id="2UD-ZR-9Cl"/>
                 <outlet property="heatmapImageView" destination="vWU-Ty-GC7" id="eeE-1f-VBD"/>
+                <outlet property="venueLabel" destination="bVD-Lj-hBu" id="mmV-hw-N42"/>
                 <outlet property="workoutDateLabel" destination="L8d-Le-KW8" id="Y4O-G8-hut"/>
-                <outlet property="workoutTypeLabel" destination="iQz-bH-oJt" id="ZgF-5D-7FW"/>
             </connections>
             <point key="canvasLocation" x="-236" y="54"/>
         </collectionViewCell>
